@@ -1,12 +1,10 @@
 package ru.practicum.application.event.service.impl;
 
-import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
-import lombok.experimental.FieldDefaults;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.application.event.mapper.EventMapper;
 import ru.practicum.application.event.model.Event;
 import ru.practicum.application.event.repository.EventRepository;
@@ -31,32 +29,41 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static ru.practicum.exception.NotFoundException.notFoundException;
+
 
 @Service
-@Slf4j
 @RequiredArgsConstructor
-@FieldDefaults(level = AccessLevel.PRIVATE)
+@Transactional
 public class EventServiceImpl implements EventService {
-    final EventRepository eventRepository;
 
-    final UserFeignClient userClient;
-    final CategoryFeignClient categoryClient;
-    final RequestFeignClient requestClient;
-    final StatsClient statsClient;
+    private static final String NOT_FOUND_EVENT_MESSAGE = "Событие с ID: {0} - не найдено";
+    private static final String PAGE_REQUEST_SORTING_PARAMETER = "e.eventDate";
+    private static final String DATE_AND_TIME_VALIDATION_MESSAGE = "Дата и время начала поиска не должна быть позже даты и времени конца поиска";
+
+    private final UserFeignClient userClient;
+    private final CategoryFeignClient categoryClient;
+    private final RequestFeignClient requestClient;
+    private final StatsClient statsClient;
+
+    private final EventRepository eventRepository;
 
     @Override
     public EventFullDto getEventById(Long eventId, String uri, String ip) throws NotFoundException {
+
         statsClient.save(new StatsRequestDto("main-server",
                 uri,
                 ip,
                 LocalDateTime.now()));
-        Event event = eventRepository.findById(eventId).orElseThrow(
-                () -> new NotFoundException("Событие с id=" + eventId + " не найдено"));
+
+        Event event = eventRepository.findById(eventId).orElseThrow(notFoundException(NOT_FOUND_EVENT_MESSAGE, eventId));
 
         if (!event.getState().equals(EventState.PUBLISHED) && !uri.toLowerCase().contains("admin")) {
             throw new NotFoundException("Такого события не существует");
         }
+
         var confirmed = requestClient.countByEventAndStatuses(event.getId(), List.of("CONFIRMED"));
+
         EventFullDto eventFullDto = EventMapper.mapEventToFullDto(
                 event,
                 confirmed,
@@ -67,8 +74,9 @@ public class EventServiceImpl implements EventService {
         List<String> urls = Collections.singletonList(uri);
         LocalDateTime start = LocalDateTime.parse(eventFullDto.getCreatedOn(), DateTimeFormatter.ofPattern(JsonFormatPattern.TIME_PATTERN));
         LocalDateTime end = LocalDateTime.now();
-        var views = statsClient.getStats(start, end, urls, true).size();
-        eventFullDto.setViews(views);
+
+        eventFullDto.setViews(statsClient.getStats(start, end, urls, true).size());
+
         return eventFullDto;
     }
 
@@ -84,34 +92,40 @@ public class EventServiceImpl implements EventService {
                                                  Integer size,
                                                  String uri,
                                                  String ip) throws ValidationException {
+
         List<Event> events;
         LocalDateTime startDate;
         LocalDateTime endDate;
+
         boolean sortDate = sort.equals("EVENT_DATE");
+
         if (sortDate) {
             if (rangeStart == null && rangeEnd == null && categories != null) {
-                //events = eventRepository.findAllByCategoryIdPageable(categories, EventState.PUBLISHED, PageRequest.of(from / size, size, Sort.Direction.DESC));
+
                 events = eventRepository.findAllByCategoryIdPageable(categories, EventState.PUBLISHED,
-                        PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, "e.eventDate")));
+                        PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, PAGE_REQUEST_SORTING_PARAMETER)));
             } else {
                 startDate = (rangeStart == null) ? LocalDateTime.now() :
                         LocalDateTime.parse(rangeStart, DateTimeFormatter.ofPattern(JsonFormatPattern.TIME_PATTERN));
+
                 if (text == null) {
+
                     text = "";
                 }
+
                 if (rangeEnd == null) {
                     events = eventRepository.findEventsByText("%" + text.toLowerCase() + "%", EventState.PUBLISHED,
-                            PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, "e.eventDate")));
+                            PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, PAGE_REQUEST_SORTING_PARAMETER)));
                 } else {
                     endDate = LocalDateTime.parse(rangeEnd, DateTimeFormatter.ofPattern(JsonFormatPattern.TIME_PATTERN));
                     if (startDate.isAfter(endDate)) {
-                        throw new ValidationException("Дата и время начала поиска не должна быть позже даты и времени конца поиска");
+                        throw new ValidationException(DATE_AND_TIME_VALIDATION_MESSAGE);
                     }
                     events = eventRepository.findAllByTextAndDateRange("%" + text.toLowerCase() + "%",
                             startDate,
                             endDate,
                             EventState.PUBLISHED,
-                            PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, "e.eventDate")));
+                            PageRequest.of(from / size, size, Sort.by(Sort.Direction.DESC, PAGE_REQUEST_SORTING_PARAMETER)));
 
                 }
             }
@@ -124,27 +138,30 @@ public class EventServiceImpl implements EventService {
             } else {
                 endDate = LocalDateTime.parse(rangeEnd, DateTimeFormatter.ofPattern(JsonFormatPattern.TIME_PATTERN));
             }
-            if (rangeStart != null && rangeEnd != null) {
-                if (startDate.isAfter(endDate)) {
-                    throw new ValidationException("Дата и время начала поиска не должна быть позже даты и времени конца поиска");
-                }
+            if (rangeStart != null && rangeEnd != null && startDate.isAfter(endDate)) {
+                throw new ValidationException(DATE_AND_TIME_VALIDATION_MESSAGE);
             }
+
             events = eventRepository.findEventList(text, categories, paid, startDate, endDate, EventState.PUBLISHED);
         }
+
         statsClient.save(new StatsRequestDto("main-server",
                 uri,
                 ip,
                 LocalDateTime.now()));
+
         if (!sortDate) {
             List<EventShortDto> shortEventDtos = createShortEventDtos(events);
             shortEventDtos.sort(Comparator.comparing(EventShortDto::getViews));
             shortEventDtos = shortEventDtos.subList(from, Math.min(from + size, shortEventDtos.size()));
             return shortEventDtos;
         }
+
         return createShortEventDtos(events);
     }
 
     List<EventShortDto> createShortEventDtos(List<Event> events) {
+
         HashMap<Long, Integer> eventIdsWithViewsCounter = new HashMap<>();
 
         LocalDateTime startTime = events.getFirst().getCreatedOn();
@@ -157,17 +174,23 @@ public class EventServiceImpl implements EventService {
         }
 
         var viewsCounter = statsClient.getStats(startTime, LocalDateTime.now(), uris, true);
+
         for (var statsDto : viewsCounter) {
             String[] split = statsDto.getUri().split("/");
             eventIdsWithViewsCounter.put(Long.parseLong(split[2]), Math.toIntExact(statsDto.getHits()));
         }
+
         List<EventRequestDto> requests = requestClient.findByEventIds(new ArrayList<>(eventIdsWithViewsCounter.keySet()));
         List<Long> usersIds = events.stream().map(Event::getInitiator).toList();
+
         Set<Long> categoriesIds = events.stream().map(Event::getCategory).collect(Collectors.toSet());
+
         Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
                 .collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
+
         Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
                 .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
+
         return events.stream()
                 .map(e -> EventMapper.mapEventToShortDto(e, categories.get(e.getCategory()), users.get(e.getInitiator())))
                 .peek(dto -> dto.setConfirmedRequests(
@@ -176,6 +199,6 @@ public class EventServiceImpl implements EventService {
                                 .count()
                 ))
                 .peek(dto -> dto.setViews(eventIdsWithViewsCounter.get(dto.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
